--- a/webroot/style.css
+++ b/webroot/style.css
@@ -1,28 +1,32 @@
-#game-container {
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* Centers content vertically */
+  align-items: center;     /* Centers content horizontally */
   text-align: center;
-  max-width: 800px;
-  max-height: 600px;
+  border-radius: 5px;
+  max-width: 650px;
   margin: 0 auto;
-  padding: 15px;
-  background: #f8f9fa;
-  border-radius: 15px;
-  box-shadow: 0 0 20px rgba(0,0,0,0.1);
+  min-height: 100vh;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(130deg, #a8edea, #fed6e3);
   overflow-y: auto;
 }
 
 #grid {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-gap: 10px;
-  margin: 20px 0;
+  grid-gap: 8px;
+  margin: 5px 0;
   min-height: 200px;
   width: 100%;
-  padding: 15px;
+  padding: 5px;
 }
 
 .cell {
   background-color: #ffffff;
-  padding: 15px 10px;
+  padding: 15px 15px;
   font-size: 16px;
   text-align: center;
   border-radius: 10px;
@@ -57,9 +61,9 @@
 }
 
 button {
-  padding: 12px 30px;
+  padding: 8px 20px;
   font-size: 16px;
-  margin: 15px;
+  margin: 5px;
   cursor: pointer;
   background-color: #4caf50;
   color: white;
@@ -79,19 +83,19 @@ button:hover {
   font-weight: bold;
   color: #2196f3;
   font-size: 16px;
-  padding: 10px;
+  padding: 5px;
   background: #e3f2fd;
   border-radius: 8px;
-  margin: 15px 0;
+  margin: 5px;
 }
 
-#message {
+/* #message {
   font-weight: bold;
   margin-top: 15px;
   padding: 10px;
   border-radius: 8px;
   animation: fadeIn 0.5s;
-}
+} */
 
 @keyframes fadeIn {
   from { opacity: 0; }
