--- a/webroot/style.css
+++ b/webroot/style.css
@@ -1,83 +1,348 @@
+@font-face {
+  font-family: "ArcadeClassic";
+  src: url('../assets/fonts/ARCADECLASSIC.TTF') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   margin: 0;
-  font-family: 'Arial', sans-serif;
-  color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  width: 100%; 
-  background-image: url('../assets/substory-bg.png'); 
+  font-family: 'ArcadeClassic', sans-serif;
+  background-image: url('../assets/substory-bg.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  z-index: -1; 
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center; 
+  box-sizing: border-box;
 }
 
-
-/* Game Container */
 #game-container {
-  width: 90%;
-  max-width: 600px;
-  background: linear-gradient(145deg, #3d3d91, #2c2c54);
+  width: 80%;
+  max-width: 800px;
+  margin: 20px auto;
+  background: linear-gradient(160deg, rgba(102, 61, 212, 0.5), rgba(102, 61, 212, 0.3));
   border-radius: 15px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   padding: 20px;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  justify-items: center;
+  position: relative;
+  overflow: hidden;
+  box-sizing: border-box;
 }
 
-/* Header Styles */
+
+.word-grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 20px;
+  margin-top: 20px;
+  padding: 10px;
+}
+
+/*  word grid elements */
+.cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  background-position: center;
+  color: #fff;
+  padding: 20px 40px;
+  border-radius: 25px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  cursor: pointer;
+  position: relative;
+  transition: transform 0.4s ease, background 0.4s ease, box-shadow 0.4s ease;
+  word-wrap: break-word;
+  text-align: center;
+  min-height: 30px;
+  overflow: hidden;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  background-color: #381A96;
+}
+
+.cell:hover {
+  transform: scale(1.05) rotate(3deg);
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
+  background-color: rgba(189, 41, 188, 0.3);
+  transition: all 0.2s ease;
+}
+
+.cell:active {
+  transform: scale(0.98);
+  background-color: rgba(189, 41, 188, 0.6);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
+  border: 3px solid #BC29BC;
+}
+
+.cell.selected {
+  transform: scale(0.98);
+  background-color: rgba(189, 41, 188, 0.6);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
+  border: 3px solid #BC29BC;
+}
+
+.cell.neonGlow {
+  box-shadow: 0 0 15px rgba(189, 41, 188, 0.8), 0 0 30px rgba(189, 41, 188, 0.6);
+  animation: neonGlow 2s forwards;
+}
+
+@keyframes neonGlow {
+  0% {
+    box-shadow: 0 0 10px rgba(189, 41, 188, 0.8), 0 0 20px rgba(189, 41, 188, 0.6);
+  }
+  100% {
+    box-shadow: 0 0 30px rgba(189, 41, 188, 1), 0 0 60px rgba(189, 41, 188, 0.7);
+  }
+}
+
+.cell.selected:hover {
+  transform: scale(1.05) rotate(0deg); 
+  background-color: rgba(189, 41, 188, 0.3);
+}
+
+
+#confirm {
+  background-color: #663DD4;
+  color: #fff;
+  border: none;
+  padding: 15px 30px;
+  border-radius: 50px; 
+  font-size: 18px;
+  font-weight: bold;
+  text-transform: uppercase;
+  cursor: pointer;
+  box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.3); 
+  transition: all 0.3s ease-in-out;
+  margin-top: 20px; 
+  display: block;
+  width: 40%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#confirm:hover {
+  background-color: #0C004D;
+  transform: scale(1.05); 
+  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.4);
+}
+
+#confirm:active {
+  transform: scale(1); 
+}
+
+
 .game-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 10px;
 }
 
-
 .game-round {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
+  color: #0C004D;
+}
+
+.timer-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border: 1px solid #0C004D;
+  padding: 10px;
+  border-radius: 20px;
+  background-color: rgba(101, 61, 212, 0.3);
+}
+
+.timer-icon {
+  width: 30px;
+  height: 30px;
 }
 
 .countdown-timer {
-  font-size: 18px;
-  color: #ff7eb9;
+  font-size: 1.5em;
+  font-weight: bold;
+  color: #0C004D;
 }
 
-/* Story Section */
-.story-section {
-  background: rgba(255, 255, 255, 0.1);
-  padding: 15px;
+#story {
+  background: linear-gradient(135deg, rgba(247, 197, 246, 0.1), rgba(188, 41, 188, 0.3));
+  padding: 20px;
   border-radius: 10px;
+  border: 2px solid rgba(188, 41, 188, 0.8);
+  box-shadow: 0 0 10px rgba(188, 41, 188, 0.6), 0 0 20px rgba(188, 41, 188, 0.5), 0 0 40px rgba(188, 41, 188, 0.4);
+  text-align: center;
+  color: #0C004D;
+  font-size: 22px;
+  font-family: "ArcadeClassic", sans-serif;
+  /* text-shadow: 0 0 5px rgba(188, 41, 188, 0.8), 0 0 10px rgba(188, 41, 188, 0.6); */
+  animation: glow-pulse 4s infinite;
 }
 
-.story-text {
-  font-size: 18px;
-  line-height: 1.6;
-  margin-bottom: 15px;
+@keyframes glow-pulse {
+  0%, 100% {
+    box-shadow: 0 0 10px rgba(188, 41, 188, 0.6), 0 0 20px rgba(188, 41, 188, 0.5), 0 0 40px rgba(188, 41, 188, 0.4);
+  }
+  50% {
+    box-shadow: 0 0 20px rgba(188, 41, 188, 0.8), 0 0 30px rgba(188, 41, 188, 0.6), 0 0 50px rgba(188, 41, 188, 0.5);
+  }
 }
 
-/* Word Grid */
-.word-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-  gap: 10px;
-}
-
-/* Button Styles */
-#confirm {
-  background-color: #7e57c2;
+.cell-players {
+  font-size: 0.8rem;
   color: #fff;
-  border: none;
+  margin-top: 5px;
+  opacity: 0.8;
+}
+
+
+#story-completed-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  filter: blur(10px);
+  transition: filter 0.3s ease-in-out;
+}
+
+
+.story-completed-container {
+  text-align: center;
+  color: #ffffff;
+  padding: 30px;
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 20px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+  max-width: 80%;
+  animation: fadeIn 1s ease-in-out;
+}
+
+
+.story-completed-container h1 {
+  font-size: 2.5rem;
+  color: #f7c5f6;
+  margin-bottom: 20px;
+  font-family: 'ArcadeClassic', sans-serif;
+}
+
+
+#final-story-text {
+  white-space: pre-wrap;
+  text-align: left;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f4f4f4;
+  border-radius: 10px;
+  color: #0C004D;
+  font-size: 1.2rem;
+  font-family: 'Pixelify Sans', sans-serif;
+  box-shadow: 0 0 15px rgba(188, 41, 188, 0.6);
+}
+
+
+#restart-game {
+  background-color: #663DD4;
+  color: #ffffff;
   padding: 10px 20px;
-  border-radius: 5px;
-  font-size: 16px;
+  border: none;
+  border-radius: 25px;
+  font-size: 1.2rem;
   cursor: pointer;
+  margin-top: 20px;
   transition: background-color 0.3s ease;
 }
 
-#confirm:hover {
-  background-color: #5e35b1;
+#restart-game:hover {
+  background-color: #381A96;
+}
+
+/* round end dispplay */
+@keyframes fadeIn {
+  0% {
+      opacity: 0;
+      transform: translateY(50px);
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(0);
+  }
+}
+@keyframes fadeInZoom {
+  0% {
+      transform: scale(0.5);
+      opacity: 0;
+  }
+  100% {
+      transform: scale(1);
+      opacity: 1;
+  }
+}
+
+@keyframes fadeInMove {
+  0% {
+      opacity: 0;
+      transform: translateY(-10px);
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(0);
+  }
+}
+
+
+/* rounds */
+.game-round {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  width: 50px;
+  height: 50px;
+}
+
+.circle {
+  width: 50px;
+  height: 50px;
+  transform: rotate(-90deg);
+}
+
+.track {
+  fill: none;
+  stroke: rgb(188, 41, 188, 0.5);
+  stroke-width: 3;
+}
+
+.progress {
+  fill: none;
+  stroke: #0C004D;
+  stroke-width: 3;
+  stroke-linecap: round;
+  stroke-dasharray: 100;
+  stroke-dashoffset: 100; 
+  transition: stroke-dashoffset 0.5s ease;
+}
+
+.text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 20px;
+  font-weight: bold;
+  color: #000;
+  text-align: center;
 }
