--- a/webroot/style.css
+++ b/webroot/style.css
@@ -261,21 +261,21 @@ button:hover::after {
 
 .cell-players {
   position: absolute;
-  top: -8px;
-  right: -8px;
+  bottom: 0px;
+  right: 0px;
+  padding: 2px;
   background: #fdbb2d;
   color: #1a2a6c;
   border-radius: 50%;
-  width: 30px;
-  height: 30px;
+  width: 22px;
+  height: 22px;
   display: flex;
-  /* align-items: center;
-  justify-content: center; */
-  align-items: flex-end; /* Aligns the text to the bottom */
-  justify-content: flex-start; /* Aligns the text to the left */
-  font-size: 11px;
+  align-items: center;
+  justify-content: center;
+  /* align-items: flex-end; 
+  justify-content: flex-start; */
+  font-size: 12px;
   font-weight: bold;
   box-shadow: 0 3px 6px rgba(0,0,0,0.3);
   z-index: 2;
-  padding: 2px;
 }
