--- a/webroot/style.css
+++ b/webroot/style.css
@@ -413,8 +413,7 @@ button:hover::after {
 .toast {
   visibility: hidden;
   min-width: 250px;
-  background: linear-gradient(135deg, #1a2a6c, #b21f1f);
-  color: #fff;
+  background: linear-gradient(135deg, #7a0b0b, #b21f1f, #ff4b4b);
   text-align: center;
   border-radius: 25px;
   padding: 16px;
