--- a/webroot/style.css
+++ b/webroot/style.css
@@ -19,7 +19,7 @@ body {
 #grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 12px;
+  grid-gap: 8px;
   margin: 10px 0;
   min-height: 160px;
   width: 100%;
@@ -29,7 +29,8 @@ body {
 .cell {
   background-color: rgba(255, 255, 255, 0.9);
   height: 60px;
-  padding: 20px 15px;
+  width: 100px;
+  padding: 5px 5px;
   font-size: 18px;
   text-align: center;
   border-radius: 15px;
