--- a/webroot/style.css
+++ b/webroot/style.css
@@ -26,7 +26,7 @@ body {
   padding: 10px;
 }
 
-/* .cell {
+.cell {
   background-color: rgba(255, 255, 255, 0.9);
   min-height: 60px;
   height: auto;
@@ -51,14 +51,14 @@ body {
   align-items: center;
   justify-content: center;
   text-overflow: ellipsis;
-} */
-.cell {
+}
+/* .cell {
   background-color: rgba(255, 255, 255, 0.9);
   min-height: 60px;
   height: auto;
   min-width: 120px;
   padding: 8px 8px;
-  font-size: 4vw; /* Use viewport width to adjust font size */
+  font-size: 2vw; 
   text-align: center;
   border-radius: 15px;
   border: 3px solid transparent;
@@ -77,10 +77,10 @@ body {
   align-items: center;
   justify-content: center;
   text-overflow: ellipsis;
-  white-space: nowrap; /* Prevent wrapping */
-  overflow: hidden; /* Ensure text doesn't overflow the box */
-  max-width: 100%; /* Prevent width from exceeding container */
-}
+  white-space: nowrap; 
+  overflow: hidden; 
+  max-width: 100%;
+} */
 
 
 .cell:hover {
